# bw-monitor

./: .gitignore  CLAUDE.md  README.md  go.mod  go.sum  main.go
internal/k8s/: client.go  exec.go
internal/model/: bans.go  detail.go  excludes.go  filter.go  list.go  messages.go  model.go
internal/redis/: bans.go  client.go  reconnect.go  types.go
internal/ui/: colours.go  format.go
mobile/BWMonitor/: README.md  project.yml
mobile/BWMonitor/BWMonitor/: BWMonitorApp.swift  Info.plist
mobile/BWMonitor/BWMonitor/Models/: Ban.swift  BlockReport.swift  Filter.swift
mobile/BWMonitor/BWMonitor/Services/: KubeConfig.swift  KubernetesClient.swift  MonitorService.swift
mobile/BWMonitor/BWMonitor/Utilities/: IPColor.swift
mobile/BWMonitor/BWMonitor/ViewModels/: MonitorViewModel.swift
mobile/BWMonitor/BWMonitor/Views/: BanDetailView.swift  BansListView.swift  ConnectionView.swift  ContentView.swift  FilterSheet.swift  ReportDetailView.swift  ReportsListView.swift
pwa/: README.md  app.css  app.js  index.html  manifest.json  server.js  services.js  sw.js
tui-go/: .gitignore  README.md  go.mod  go.sum  main.go
tui-go/internal/k8s/: portforward.go
tui-go/internal/model/: bans.go  detail.go  filter.go  list.go  messages.go  model.go
tui-go/internal/redis/: bans.go  client.go  reconnect.go
tui-go/internal/ui/: format.go  styles.go
tui-rust/: Cargo.toml  README.md
tui-rust/src/: app.rs  k8s.rs  main.rs  redis_client.rs  types.rs  ui.rs
